# web-boardimage

./: .dockerignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
chess/: __init__.py  svg.py
