[project]
name = "web-boardimage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "cairosvg~=2.7.1",
]

[tool.setuptools]
packages = ["chess", "piece_png", "pieces_png"]  # List of top-level packages